Format + translation fixes
Finalize translations

fix

fix

css

css

data

lint

CV

css

locale and link

fix

--- a/locales/en/blog.json
+++ b/locales/en/blog.json
@@ -1,3 +1,4 @@
 {
-  "Mon blog sur lequel vous trouverez des articles aussi bien sur des sujets techniques que sur d'autres sujets.":"My blog where you'll find articles on technical subjects as well as others."
+  "BLOG.PAGE.TITLE": "Blog",
+  "BLOG.PAGE.DESCRIPTION": "My blog where you'll find articles on languages and tools that I use as well as other subjects."
 }
