--- a/locales/fr/blog.json
+++ b/locales/fr/blog.json
@@ -1,3 +1,4 @@
 {
-  "Mon blog sur lequel vous trouverez des articles aussi bien sur des sujets techniques que sur d'autres sujets.":"Mon blog sur lequel vous trouverez des articles aussi bien sur des sujets techniques que sur d'autres sujets."
+  "BLOG.PAGE.TITLE": "Blog",
+  "BLOG.PAGE.DESCRIPTION": "Mon blog sur lequel vous trouverez des articles aussi bien sur des sujets techniques que sur d'autres sujets."
 }
