--- a/locales/en/cv.json
+++ b/locales/en/cv.json
@@ -1,14 +1,16 @@
 {
-  "WORKING.EXPERIENCE": "Working experience",
+  "CV.PAGE.TITLE": "Resume",
+  "CV.PAGE.DESCRIPTION": "My detailed working experience and education, as well as my technical skills and hobbies.",
+  "RESUME": "Resume",
+  "WORK.EXPERIENCE": "Work experience",
   "DOWNLOAD.RESUME": "Download my resume",
-  "Curriculum Vitae": "Resume",
-  "Le détail de mon parcours professionnel et scolaire, ainsi que mes compétences techniques et centres d'intérêts.": "My detailed working and student experience, as well as my technical skills and hobbies.",
   "SEE.MORE.EXPERIENCES": "See more experiences",
   "SEE.LESS.EXPERIENCES": "See less experiences",
   "AND": "and",
   "TODAY": "Today",
-  "TOOLS":"Tools",
-  "RESPONSIBLE.DIGITAL.KNOWLEDGE.CERTIFICATE": "Responsible digital knowledge certificate",
+  "TOOLS": "Tools",
+  "EDUCATION": "Education",
+  "SUSTAINABLE.IT.KNOWLEDGE.CERTIFICATE": "Sustainable IT knowledge certificate",
   "LANGUAGES.TOOLS": "Languages and tools",
   "HOBBIES": "Hobbies"
 }
