--- a/locales/en/projets.json
+++ b/locales/en/projets.json
@@ -1,9 +1,9 @@
 {
-  "Projets personnels": "Personal projects",
-  "Les projets personnels sur lesquels je travaille.": "Personal projects that I work on.",
+  "PROJECTS.PAGE.TITLE": "Personal projects",
+  "PROJECTS.PAGE.DESCRIPTION": "Personal projects that I work on.",
   "TECHNICAL.STACK": "Technical stack",
-  "DASH.WEB.PROJECT.DESCRIPTION": "Frontend of Dash project : dashboard displaying multiple widgets on a same page (RSS feed, weather or calendar).",
-  "DASH.WEBSERVICES.PROJECT.DESCRIPTION": "Backend of Dash project : dashboard displaying multiple widgets on a same page (RSS feed, weather or calendar).",
+  "DASH.WEB.PROJECT.DESCRIPTION": "Frontend of Dash project : dashboard displaying multiple widgets on a same page such as a RSS feed, the weather or an agenda.",
+  "DASH.WEBSERVICES.PROJECT.DESCRIPTION": "Backend of Dash project : dashboard displaying multiple widgets on a same page such as a RSS feed, the weather or an agenda.",
   "CASHMANAGER.PROJECT.DESCRIPTION": "Personal website.",
   "PORTFOLIO.PROJECT.DESCRIPTION": "Budget-managing application."
 }
