--- a/locales/fr/projets.json
+++ b/locales/fr/projets.json
@@ -1,9 +1,9 @@
 {
-  "Projets personnels": "Projets personnels",
-  "Les projets personnels sur lesquels je travaille.": "Les projets personnels sur lesquels je travaille.",
+  "PROJECTS.PAGE.TITLE": "Projets personnels",
+  "PROJECTS.PAGE.DESCRIPTION": "Les projets personnels sur lesquels je travaille.",
   "TECHNICAL.STACK": "Stack technique",
-  "DASH.WEB.PROJECT.DESCRIPTION": "Frontend du projet Dash : dashboard permettant d'afficher plusieurs widgets sur une même page (flux RSS, météo ou encore agenda).",
-  "DASH.WEBSERVICES.PROJECT.DESCRIPTION": "Backend du projet Dash : dashboard permettant d'afficher plusieurs widgets sur une même page (flux RSS, météo ou encore agenda). ",
+  "DASH.WEB.PROJECT.DESCRIPTION": "Frontend du projet Dash : dashboard permettant d'afficher plusieurs widgets sur une même page comme un flux RSS, la météo ou encore un agenda.",
+  "DASH.WEBSERVICES.PROJECT.DESCRIPTION": "Backend du projet Dash : dashboard permettant d'afficher plusieurs widgets sur une même page comme un flux RSS, la météo ou encore un agenda.",
   "CASHMANAGER.PROJECT.DESCRIPTION": "Application de gestion de budget.",
   "PORTFOLIO.PROJECT.DESCRIPTION": "Site web personnel."
 }
