--- a/locales/fr/translation.json
+++ b/locales/fr/translation.json
@@ -1,17 +1,18 @@
 {
-    "DEVELOPED.WITH": "Développé avec",
-    "AT": "chez",
-    "Accueil": "Accueil",
-    "CV": "CV",
-    "Blog": "Blog",
-    "Projets": "Projets",
-    "Contact": "Contact",
-    "Développeur Fullstack": "Développeur Fullstack",
-    "LINKEDIN.PROFILE": "Profil LinkedIn",
-    "GITHUB.PROFILE": "Profil GitHub",
-    "SCRUM.ORG.PROFILE": "Profil Scrum.org",
-    "CERTIFICATIONS": "Certifications",
-    "MEDIUM.PROFILE": "Profil Medium",
-    "STACK.OVERFLOW.PROFILE": "Profil Stack Overflow"
-
+  "DEVELOPED.WITH": "Développé avec",
+  "ICONS.BY": "Icônes de",
+  "AT": "chez",
+  "HOME.LABEL": "Accueil",
+  "RESUME.LABEL": "CV",
+  "BLOG.LABEL": "Blog",
+  "PROJECTS.LABEL": "Projets",
+  "CONTACT.LABEL": "Contact",
+  "LINKEDIN.PROFILE": "Profil LinkedIn",
+  "GITHUB.PROFILE": "Profil GitHub",
+  "SCRUM.ORG.PROFILE": "Profil Scrum.org",
+  "CERTIFICATIONS": "Certifications",
+  "MEDIUM.PROFILE": "Profil Medium",
+  "STACK.OVERFLOW.PROFILE": "Profil Stack Overflow",
+  "PAGE.NOT.FOUND.MESSAGE": "La page que vous cherchez n'existe pas.",
+  "Développeur logiciel": "Développeur logiciel"
 }
