--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -1,7 +1,7 @@
 {
   "DEVELOPED.WITH": "Developed with",
   "ICONS.BY": "Icons by",
-  "AT": "at",
+  "AT": "at ",
   "HOME.LABEL": "Home",
   "RESUME.LABEL": "Resume",
   "BLOG.LABEL": "Blog",
@@ -14,5 +14,5 @@
   "MEDIUM.PROFILE": "Medium profile",
   "STACK.OVERFLOW.PROFILE": "Stack Overflow profile",
   "PAGE.NOT.FOUND.MESSAGE": "The page you're looking for doesn't exist.",
-  "Développeur logiciel": "Software developer"
+  "Développeur d'applications": "Software developer"
 }
